objects/LLC_BI__Relationship_Loan_to_Value_Calculation__c.object
<CustomObject>
    <description>The Relationship Loan to Value Calculation stores the value of calculations determined by RLTV Calc Config records.</description>
    <fields>
        <fullName>LLC_BI__RLTV_Currency_Value__c</fullName>
        <description>The system automatically populates this optional currency field if the associated configuration record is configured to calculate a currency. By default, it is blank.</description>
        <inlineHelpText>This system-populated field displays the RLTV Calculation.</inlineHelpText>
        <label>RLTV Currency Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RLTV_Percent_Value__c</fullName>
        <description>The system automatically populates this optional percent field if the associated configuration record is configured to calculate a ratio. By default, it is blank.</description>
        <inlineHelpText>This system-populated field displays the RLTV Calculation.</inlineHelpText>
        <label>RLTV Percent Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Loan_to_Value_Calc_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field with the name of the configuration record where the calculation data is entered. By default, it is blank.</description>
        <inlineHelpText>This system-populated field displays the name of the configuration record where the calculation data is entered.</inlineHelpText>
        <label>Relationship Loan to Value Calc Config</label>
        <referenceTo>LLC_BI__Relationship_Loan_to_Value_Calc_Config__c</referenceTo>
        <relationshipLabel>Relationship Loan to Value Calculations</relationshipLabel>
        <relationshipName>Relationship_Loan_to_Value_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship__c</fullName>
        <description>The system automatically populates this optional master-detail relationship field with the name of the relationship associated to the calculation. By default, it is blank.</description>
        <inlineHelpText>This system-populated field displays the name of the relationship associated to the calculation.</inlineHelpText>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Loan to Value Calculations</relationshipLabel>
        <relationshipName>Relationship_Loan_to_Value_Calculations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Relationship Loan to Value Calculation</label>
    <nameField>
        <label>Relationship Loan to Value Calc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Loan to Value Calculations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>